--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.6",
     "express-graphql": "^0.8.0",
     "graphql": "^14.4.0",
     "lodash": "^4.17.15",
-    "mongoose": "^5.6.1"
+    "mongoose": "^5.6.1",
+    "multer": "^1.4.2",
+    "uuid": "^7.0.1"
   }
 }
